2013-01-31  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2013-01-21  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2013-01-20  Holger Seelig  <holger.seelig@yahoo.de>

	* URI.h:
	* Type.h:
	* Type.cpp:
	* Input.h:
	* Output.h:
	* Id.h:
	* Input.cpp:
	* Id.cpp:
	* Output.cpp:
	* InputOutput.h:
	* AccessType.h:
	* ClassicVrml.h:
	* ClassicVrml.cpp:
	* CType.h:
	* CType.cpp:
	* NumPunct.h:
	* NumPunct.cpp:
	* AccessTypes.h:
	* AccessTypes.cpp: 

2013-01-04  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2013-01-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* experimental.cproj: 

2013-01-03  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2012-12-31  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* Makefile.am:
	* experimental.cproj: 

2012-12-27  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2012-12-22  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2012-12-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am: 

2012-12-12  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2012-12-06  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2012-12-05  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2012-12-03  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2012-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* URI.h:
	* main.cpp: 

2012-11-29  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2012-11-26  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* Makefile.am:
	* experimental.cproj: 

2012-11-25  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2012-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* Makefile.am:
	* experimental.cproj: 

2012-11-21  Holger Seelig  <holger.seelig@yahoo.de>

	* experimental.cproj: 

2012-11-13  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2012-11-11  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2012-11-10  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 
