@@ -16,11 +16,6 @@ titania_experimental_LDADD = $(top_builddir)/libtitania-standard/libtitania-stan
 
 titania_experimental_SOURCES = main.cpp
 
-all:
-	mkdir -p $(builddir)/bin/$(CONFIGURATION)
-	cp $(builddir)/*.o $(builddir)/bin/$(CONFIGURATION)
-	cp $(builddir)/.libs/* $(builddir)/bin/$(CONFIGURATION)
-
 run:
 	$(builddir)/$(bin_PROGRAMS)
 
