@@ -1,5 +1,9 @@
 2013-01-31  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Makefile.am: 
+
+2013-01-31  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* main.cpp: 
 
 2013-01-21  Holger Seelig  <holger.seelig@yahoo.de>
